Layout issues getting a bit better

--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,43 @@
   left: 100px;
 }
 
+.lil-links {
+	display: block;
+	margin: 0;
+	padding: 0;
+	position: absolute;
+	z-index: 1;
+	left: -50px;
+	top: 1200px;
+	bottom: 90px;
+	overflow: hidden;
+	width: 100%;
+	height: 200px;
+}
+
+.lil-links ul {
+	position: relative;
+	z-index: 1;
+	overflow: hidden;
+	margin: 0 auto;
+	min-width: 1024px;
+	width: 100%;
+	max-width: 1440px;
+	height: 200px;
+	text-align: center;
+}
+
+.lil-links ul li {
+	position: relative;
+	z-index: 1;
+	float: left;
+	overflow: hidden;
+	margin: 0;
+	width: 25%;
+	height: 200px;
+}
+
+/*
 .lil-vid1 {
 	top: 900px;
 	position: relative;
@@ -54,7 +91,7 @@
 	max-width: 15%;
 	max-height: 20%;
 }
-/*
+
 .footer-atb {
 	z-index: 1;
 	clear: both;
